--- a/MDK-ARM/ProjectCube.uvprojx
+++ b/MDK-ARM/ProjectCube.uvprojx
@@ -393,26 +393,6 @@
           <GroupName>Application/User</GroupName>
           <Files>
             <File>
-              <FileName>NumType_F4.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Src\NumType_F4.c</FilePath>
-            </File>
-            <File>
-              <FileName>fuzzy_F4.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\Inc\fuzzy_F4.h</FilePath>
-            </File>
-            <File>
-              <FileName>NumType_F4.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\Inc\NumType_F4.h</FilePath>
-            </File>
-            <File>
-              <FileName>rangierFuzzy_F4.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\Inc\rangierFuzzy_F4.h</FilePath>
-            </File>
-            <File>
               <FileName>main.c</FileName>
               <FileType>1</FileType>
               <FilePath>../Src/main.c</FilePath>
@@ -448,14 +428,39 @@
               <FilePath>../Src/stm32f7xx_hal_msp.c</FilePath>
             </File>
             <File>
+              <FileName>FuzzyTry_F4.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\FuzzyTry_F4.c</FilePath>
+            </File>
+            <File>
               <FileName>fuzzy_F4.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Src\fuzzy_F4.c</FilePath>
             </File>
             <File>
-              <FileName>rangierFuzzy_F4.c</FileName>
+              <FileName>NumType_F4.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\Src\rangierFuzzy_F4.c</FilePath>
+              <FilePath>..\Src\NumType_F4.c</FilePath>
+            </File>
+            <File>
+              <FileName>fuzzy_F4.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Inc\fuzzy_F4.h</FilePath>
+            </File>
+            <File>
+              <FileName>fuzzy_enums.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Inc\fuzzy_enums.h</FilePath>
+            </File>
+            <File>
+              <FileName>FuzzyTry_F4.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Inc\FuzzyTry_F4.h</FilePath>
+            </File>
+            <File>
+              <FileName>NumType_F4.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Inc\NumType_F4.h</FilePath>
             </File>
           </Files>
         </Group>
