--- a/MDK-ARM/ProjectCube.uvprojx
+++ b/MDK-ARM/ProjectCube.uvprojx
@@ -338,7 +338,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F767xx,USE_HAL_DRIVER,STM32F767xx</Define>
               <Undefine></Undefine>
-              <IncludePath>../Inc;                                                             ../Drivers/STM32F7xx_HAL_Driver/Inc;                                                             ../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy;                                                             ../Middlewares/ST/STM32_USB_Device_Library/Core/Inc;                                                             ../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc;                                                             ../Drivers/CMSIS/Device/ST/STM32F7xx/Include;                                                             ../Drivers/CMSIS/Include</IncludePath>
+              <IncludePath>../Inc;                                                              ../Drivers/STM32F7xx_HAL_Driver/Inc;                                                              ../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy;                                                              ../Middlewares/ST/STM32_USB_Device_Library/Core/Inc;                                                              ../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc;                                                              ../Drivers/CMSIS/Device/ST/STM32F7xx/Include;                                                              ../Drivers/CMSIS/Include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -476,6 +476,11 @@
               <FileName>stm32f7xx_hal_msp.c</FileName>
               <FileType>1</FileType>
               <FilePath>../Src/stm32f7xx_hal_msp.c</FilePath>
+            </File>
+            <File>
+              <FileName>pid_controller.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\pid_controller.c</FilePath>
             </File>
           </Files>
         </Group>
