--- a/MDK-ARM/ProjectCube.uvprojx
+++ b/MDK-ARM/ProjectCube.uvprojx
@@ -16,8 +16,8 @@
         <TargetCommonOption>
           <Device>STM32F767ZITx</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>STMicroelectronics.STM32F7xx_DFP.1.0.3</PackID>
-          <PackURL>http://www.ST.com/</PackURL>
+          <PackID>Keil.STM32F7xx_DFP.2.12.0</PackID>
+          <PackURL>https://www.keil.com/pack/</PackURL>
           <Cpu>IRAM(0x20000000-0x2007FFFF) IROM(0x8000000-0x81FFFFF) CLOCK(12000000) FPU3(DFPU) CPUTYPE("Cortex-M7") ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
@@ -481,6 +481,16 @@
               <FileName>pid_controller.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Src\pid_controller.c</FilePath>
+            </File>
+            <File>
+              <FileName>pid_regler.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\pid_regler.c</FilePath>
+            </File>
+            <File>
+              <FileName>pid_regler.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Src\pid_regler.h</FilePath>
             </File>
           </Files>
         </Group>
